added hero section+navbar

--- a/index.html
+++ b/index.html
@@ -10,18 +10,32 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <nav class="Recipe-navbar">
+      <div class="Recipe-navbar-brand">
+        <a href="#">SheCodes</a>
+      </div>
+      <div class="Recipe-navbar-nav">
+        <a class="Home-nav-link active" href="#">Home</a>
+        <a class="About-nav-link" href="#">About</a>
+        <a class="Recipe-nav-link" href="#">Recipe</a>
+        <a class="Contact-nav-link" href="#">Contact</a>
+      </div>
+    </nav>
     <div class="hero">
-      <h1>Recepie Collection</h1>
+      <h1>Recipe Collection</h1>
       <h2>
         Find a variety of inspiring recipes that are easy, delicious, and
         healthy here
       </h2>
-      <div class="collection-btn-section">
-        <a href="#" class="collection-btn"> Explore EmoBloom </a>
-      </div>
     </div>
   </body>
 </html>
