--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
       <div class="Recipe-navbar-nav">
         <a class="Home-nav-link active" href="#">Home</a>
-        <a class="About-nav-link" href="#">About</a>
-        <a class="Recipe-nav-link" href="#">Recipe</a>
-        <a class="Contact-nav-link" href="#">Contact</a>
+        <a class="About-nav-link" href="About.html">About</a>
+        <a class="Recipe-nav-link" href="Recipe.html">Recipe</a>
+        <a class="Contact-nav-link" href="Contact.html">Contact</a>
       </div>
     </nav>
     <div class="hero">
@@ -36,6 +36,40 @@
         Find a variety of inspiring recipes that are easy, delicious, and
         healthy here
       </h2>
+    </div>
+    <div class="container">
+      <div class="roww">
+        <div class="article">
+          <img src="/image/Rectangle 110.png" alt="food" />
+          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+        </div>
+        <div class="article">
+          <img src="/image/Rectangle 110.png" alt="food" />
+          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+        </div>
+      </div>
+
+      <div class="roww">
+        <div class="article">
+          <img src="/image/Rectangle 110.png" alt="food" />
+          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+        </div>
+        <div class="article">
+          <img src="/image/Rectangle 110.png" alt="food" />
+          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+        </div>
+      </div>
+
+      <div class="roww">
+        <div class="article">
+          <img src="/image/Rectangle 110.png" alt="food" />
+          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+        </div>
+        <div class="article">
+          <img src="/image/Rectangle 110.png" alt="food" />
+          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+        </div>
+      </div>
     </div>
   </body>
 </html>
