--- a/index.html
+++ b/index.html
@@ -71,5 +71,18 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="brand-logo">
+        <img src="/image/She Codes.png" alt="logo" />
+      </div>
+      <div class="social-media-address">
+        <a href="#"><img src="image/F.png" alt="facebook" /></a>
+        <a href="#"><img src="image/insta.png" alt="facebook" /></a>
+        <a href="#"><img src="image/in.png" alt="facebook" /></a>
+      </div>
+      <div class="copyright">
+        <p>© 2021 SheCodes All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
