--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         healthy here
       </h2>
     </div>
-    <div class="container">
+    <div class="homepage-container">
       <div class="roww">
         <div class="article">
           <img src="/image/Rectangle 110.png" alt="food" />
