added recipe collection page & contact page

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <img src="/image/She Codes.png" alt="logo" />
       </div>
       <div class="social-media-address">
-        <a href="#"><img src="image/F.png" alt="facebook" /></a>
-        <a href="#"><img src="image/insta.png" alt="facebook" /></a>
-        <a href="#"><img src="image/in.png" alt="facebook" /></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
       </div>
       <div class="copyright">
         <p>© 2021 SheCodes All rights reserved.</p>
