make recipe page responsive

--- a/Recipe.html
+++ b/Recipe.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="Recipe-navbar">
-      <div class="Recipe-navbar-brand">
+      <div class="brand-logo">
         <a href="#">SheCodes</a>
       </div>
       <div class="Recipe-navbar-nav">
@@ -30,54 +30,60 @@
         <a class="Contact-nav-link" href="Contact.html">Contact</a>
       </div>
     </nav>
-    <h1 class="recipe-collection-h1 text-center">Recipe Collection</h1>
-    <div class="recepie-collection-container">
-      <div class="container">
-        <div class="recipe-card">
-          <div class="row">
-            <div class="col">
-              <img src="image/Rectangle 110.png" alt="food" />
-            </div>
-            <h2 class="food-title">Wet Vegetable Spring Rolls</h2>
-            <div class="subjects">
-              <div class="row">
-                <div class="col">Ingredient</div>
-                <div class="col">Method</div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p class="ingredient">350g spaghetti or linguine</p>
-                <p class="ingredient">
-                  140g pack diced pancetta, or smoked streaky bacon
-                </p>
-                <p class="ingredient">2 stp olive oil</p>
-                <p class="ingredient">1 garlic clove, crushed</p>
-                <p class="ingredient">1 egg, plus 4 yolks</p>
-                <p class="ingredient">50g parmesan, grated</p>
-              </div>
-              <div class="col">
-                <div class="step mt-0">
-                  <h3>step 1</h3>
-                  <p class="content">
-                    Nisl faucibus quis urna nibh ut amet diam suscipit pretium
-                    massa sollicitudin in risus in sagittis nisl faucibus quis
-                    urna nibh ut.
-                  </p>
-                </div>
-                <div class="step">
-                  <h3>step 2</h3>
-                  <p class="content">
-                    Nisl faucibus quis urna nibh ut amet diam suscipit pretium
-                    massa sollicitudin in risus in sagittis nisl faucibus quis
-                    urna nibh ut.
-                  </p>
-                </div>
-              </div>
-            </div>
+
+    <div class="recipe-collection-container">
+      <h1 class="recipe-collection-h1 text-center">Recipe Collection</h1>
+      <div class="recipe-card">
+        <img
+          class="recipe-card-image img-fluid"
+          src="image/Rectangle 110.png"
+          alt="food"
+        />
+      </div>
+      <h2 class="food-title">Wet Vegetable Spring Rolls</h2>
+      <div class="recipe-row">
+        <div class="column">
+          <h3>Ingredient</h3>
+          <p class="ingredient">350g spaghetti or linguine</p>
+          <p class="ingredient">
+            140g pack diced pancetta, or smoked streaky bacon
+          </p>
+          <p class="ingredient">2 stp olive oil</p>
+          <p class="ingredient">1 garlic clove, crushed</p>
+          <p class="ingredient">1 egg, plus 4 yolks</p>
+          <p class="ingredient">50g parmesan, grated</p>
+        </div>
+        <div class="column">
+          <h3 class="method">Method</h3>
+          <div class="step mt-0">
+            <h4>step 1</h4>
+            <p class="content">
+              Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+              sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 2</h4>
+            <p class="content">
+              Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+              sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="brand-logo">
+        <a href="#">SheCodes</a>
+      </div>
+      <div class="social-media-address">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        <p>© 2021 SheCodes All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
