--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="Recipe-navbar">
-      <div class="Recipe-navbar-brand">
+      <div class="brand-logo">
         <a href="#">SheCodes</a>
       </div>
       <div class="Recipe-navbar-nav">
@@ -73,7 +73,7 @@
     </div>
     <footer>
       <div class="brand-logo">
-        <img src="/image/She Codes.png" alt="logo" />
+        <a href="#">SheCodes</a>
       </div>
       <div class="social-media-address">
         <a href="#"><i class="fa-brands fa-facebook"></i></a>
