--- a/About.html
+++ b/About.html
@@ -70,28 +70,40 @@
         <div class="favorite-recipe">
           <h2 class="text-center">Favorite Recipe</h2>
           <div class="cards-row">
-            <div class="card">
-              <img src="/image/Rectangle 110.png" alt="food" />
-              <h3 class="card-title">Wet Vegetable Spring Rolls</h3>
+            <div class="favorite-card">
+              <img
+                class="img-fluid"
+                src="/image/ghormeh-sabzi1.jpg"
+                alt="ghormeh sabzi"
+              />
+              <h3 class="card-title">Ghormeh sabzi (Iran)</h3>
               <p>
-                Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut
-                lobortis consectetur volutpat commodo mi suspendisse odio.
+                Ghormeh sabzi or Khoresht sabzi, also spelled qormeh sabzi, is
+                an Iranian herb stew. It is considered the national dish and is
+                a very popular dish in Iran.
               </p>
             </div>
-            <div class="card">
-              <img src="/image/Rectangle 110.png" alt="food" />
-              <h3 class="card-title">Wet Vegetable Spring Rolls</h3>
+            <div class="favorite-card">
+              <img class="img-fluid" src="/image/paella.jpg" alt="paella" />
+              <h3 class="card-title">Paella (Spain)</h3>
               <p>
-                Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut
-                lobortis consectetur volutpat commodo mi suspendisse odio.
+                Paella is a rice dish originally from Valencia in Spain. Paella
+                is regarded as one of the community's identifying symbols. It is
+                one of the best-known dishes in Spanish cuisine.
               </p>
             </div>
-            <div class="card">
-              <img src="/image/Rectangle 110.png" alt="food" />
-              <h3 class="card-title">Wet Vegetable Spring Rolls</h3>
+            <div class="favorite-card">
+              <img
+                class="img-fluid"
+                src="/image/salmon-poke-bowl.jpg"
+                alt="salmon poke bowl"
+              />
+              <h3 class="card-title">Salmon Poke Bowl (Hawaii)</h3>
               <p>
-                Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut
-                lobortis consectetur volutpat commodo mi suspendisse odio.
+                A classic Hawaiian preparation, poke (pronounced poh-kay) is a
+                salad of cubed raw fish—traditionally ahi (yellowfin tuna) but
+                also made with salmon, tofu, or even watermelon—marinated in
+                sesame oil and soy sauce.
               </p>
             </div>
           </div>
