--- a/index.html
+++ b/index.html
@@ -40,34 +40,58 @@
     <div class="homepage-container">
       <div class="roww">
         <div class="article">
-          <img src="/image/Rectangle 110.png" alt="food" />
-          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+          <img
+            class="img-fluid rounded-2"
+            src="/image/salmon-poke-bowl.jpg"
+            alt="salmon poke bowl"
+          />
+          <h3 class="article-title">Salmon Poke Bowl</h3>
         </div>
         <div class="article">
-          <img src="/image/Rectangle 110.png" alt="food" />
-          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
-        </div>
-      </div>
-
-      <div class="roww">
-        <div class="article">
-          <img src="/image/Rectangle 110.png" alt="food" />
-          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
-        </div>
-        <div class="article">
-          <img src="/image/Rectangle 110.png" alt="food" />
-          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+          <img
+            class="img-fluid rounded-2"
+            src="/image/chickpea.jpg"
+            alt="chickpea salad"
+          />
+          <h3 class="article-title">Chickpea Salad</h3>
         </div>
       </div>
 
       <div class="roww">
         <div class="article">
-          <img src="/image/Rectangle 110.png" alt="food" />
-          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+          <img
+            class="img-fluid rounded-2"
+            src="/image/Stir-Fried-Veggies With-Tofu.jpg"
+            alt="stir fried veggies with tofu"
+          />
+          <h3 class="article-title">Stir Fried Veggies With Tofu</h3>
         </div>
         <div class="article">
-          <img src="/image/Rectangle 110.png" alt="food" />
-          <h3 class="article-title">Wet Vegetable Spring Rolls</h3>
+          <img
+            class="img-fluid rounded-2"
+            src="/image/paella.jpg"
+            alt="paella"
+          />
+          <h3 class="article-title">Paella</h3>
+        </div>
+      </div>
+
+      <div class="roww">
+        <div class="article">
+          <img
+            class="img-fluid rounded-2"
+            src="/image/Caprese-Salad.jpg"
+            alt="caprese salad"
+          />
+          <h3 class="article-title">Carpes Salad</h3>
+        </div>
+        <div class="article">
+          <img
+            class="img-fluid rounded-2"
+            src="/image/ghormeh-sabzi.jpg"
+            alt="ghormeh sabzi"
+          />
+          <h3 class="article-title">Ghormeh Sabzi</h3>
         </div>
       </div>
     </div>
