--- a/Recipe.html
+++ b/Recipe.html
@@ -35,43 +35,96 @@
       <h1 class="recipe-collection-h1 text-center">Recipe Collection</h1>
       <div class="recipe-card">
         <img
-          class="recipe-card-image img-fluid"
-          src="image/Rectangle 110.png"
+          class="recipe-card-image img-fluid rounded-2"
+          src="image/ghormeh-sabzi1.jpg"
           alt="food"
         />
       </div>
-      <h2 class="food-title">Wet Vegetable Spring Rolls</h2>
+      <h2 class="food-title">Ghormeh sabzi</h2>
       <div class="recipe-row">
         <div class="column">
           <h3>Ingredient</h3>
-          <p class="ingredient">350g spaghetti or linguine</p>
+          <p class="ingredient">¼ cup canola oil, divided</p>
+          <p class="ingredient">1 large yellow onion, finely chopped</p>
+          <p class="ingredient">1 teaspoon ground turmeric</p>
           <p class="ingredient">
-            140g pack diced pancetta, or smoked streaky bacon
+            1 ½ pounds boneless chuck roast, cut into 1 1/2-inch cubes
           </p>
-          <p class="ingredient">2 stp olive oil</p>
-          <p class="ingredient">1 garlic clove, crushed</p>
-          <p class="ingredient">1 egg, plus 4 yolks</p>
-          <p class="ingredient">50g parmesan, grated</p>
+          <p class="ingredient">1 ½ cups finely chopped spinach</p>
+          <p class="ingredient">
+            1 cup finely chopped green onions (green part only)
+          </p>
+          <p class="ingredient">
+            ½ cup finely chopped Italian flat-leaf parsley
+          </p>
+          <p class="ingredient">¼ cup finely chopped cilantro</p>
+          <p class="ingredient">¼ cup finely chopped chives</p>
+          <p class="ingredient">¼ cup finely chopped fenugreek leaves</p>
+          <p class="ingredient">salt and ground black pepper to taste</p>
+          <p class="ingredient">1 lemon, juiced</p>
+          <p class="ingredient">
+            4 dried Persian limes (limoo amani), or more to taste
+          </p>
+          <p class="ingredient">
+            1 (15 ounce) can red kidney beans, drained and rinsed
+          </p>
         </div>
+
         <div class="column">
           <h3 class="method">Method</h3>
           <div class="step mt-0">
             <h4>step 1</h4>
             <p class="content">
-              Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
-              sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+              Heat 2 tablespoons oil in a large pot over medium-high heat. Add
+              onion; cook and stir until deep golden brown, 10 to 15 minutes.
+              Stir in turmeric for 1 to 2 minutes.
             </p>
           </div>
           <div class="step">
             <h4>step 2</h4>
             <p class="content">
-              Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
-              sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+              Add chuck cubes; cook until coated in turmeric and browned on all
+              sides, 8 to 10 minutes.
             </p>
+          </div>
+          <div class="step">
+            <h4>step 3</h4>
+            <p class="content">
+              Heat remaining 2 tablespoons oil in a separate pot over medium
+              heat. Add spinach, green onions, parsley, cilantro, chives, and
+              fenugreek leaves; cook and stir until deep dark green in color, 5
+              to 10 minutes.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 4</h4>
+            <p class="content">
+              Stir spinach mixture into onion and chuck mixture. Pour in enough
+              water to create a slurry consistency. Season with salt and pepper.
+              Stir in lemon juice. Reduce heat, cover, and simmer stew until
+              greens soften, about 1 hour.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 5</h4>
+            <p class="content">Pierce dried limes with a fork; add to stew.</p>
+          </div>
+          <div class="step">
+            <h4>step 6</h4>
+            <p class="content">
+              Continue simmering until chuck is tender, 30 minutes to 1 hour.
+              Stir in red kidney beans. Cook until flavors combine, about 30
+              more minutes.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 7</h4>
+            <p class="content">Discard dried limes before serving.</p>
           </div>
         </div>
       </div>
     </div>
+
     <footer>
       <div class="brand-logo">
         <a href="#">SheCodes</a>
