--- a/About.html
+++ b/About.html
@@ -24,10 +24,16 @@
         <a href="#">SheCodes</a>
       </div>
       <div class="Recipe-navbar-nav">
-        <a class="Home-nav-link" href="index.html">Home</a>
-        <a class="About-nav-link active" href="About.html">About</a>
-        <a class="Recipe-nav-link" href="Recipe.html">Recipe</a>
-        <a class="Contact-nav-link" href="Contact.html">Contact</a>
+        <a class="Home-nav-link" href="index.html" title="homepage">Home</a>
+        <a class="About-nav-link active" href="About.html" title="about author"
+          >About</a
+        >
+        <a class="Recipe-nav-link" href="Recipe.html" title="recipe Collection"
+          >Recipe</a
+        >
+        <a class="Contact-nav-link" href="Contact.html" title="Contact author"
+          >Contact</a
+        >
       </div>
     </nav>
     <div class="aboutme-section">
