--- a/Contact.html
+++ b/Contact.html
@@ -25,13 +25,22 @@
   <body>
     <nav class="Recipe-navbar">
       <div class="brand-logo">
-        <a href="#">SheCodes</a>
+        <a href="#" title="Home page">SheCodes</a>
       </div>
       <div class="Recipe-navbar-nav">
-        <a class="Home-nav-link" href="index.html">Home</a>
-        <a class="About-nav-link" href="About.html">About</a>
-        <a class="Recipe-nav-link" href="Recipe.html">Recipe</a>
-        <a class="Contact-nav-link active" href="Contact.html">Contact</a>
+        <a class="Home-nav-link" href="index.html" title="homepage">Home</a>
+        <a class="About-nav-link" href="About.html" title="about author"
+          >About</a
+        >
+        <a class="Recipe-nav-link" href="Recipe.html" title="recipe Collection"
+          >Recipe</a
+        >
+        <a
+          class="Contact-nav-link active"
+          href="Contact.html"
+          title="Contact author"
+          >Contact</a
+        >
       </div>
     </nav>
     <h1 class="contact-us-h1 text-center">Contact Us</h1>
