--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="find a variety of inspiring recipes that are easy, delicious, and
+        healthy here"
+    />
+    <title>Recipe Collection</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,10 +29,16 @@
         <a href="#">SheCodes</a>
       </div>
       <div class="Recipe-navbar-nav">
-        <a class="Home-nav-link active" href="#">Home</a>
-        <a class="About-nav-link" href="About.html">About</a>
-        <a class="Recipe-nav-link" href="Recipe.html">Recipe</a>
-        <a class="Contact-nav-link" href="Contact.html">Contact</a>
+        <a class="Home-nav-link active" href="#" title="homepage">Home</a>
+        <a class="About-nav-link" href="About.html" title="about author"
+          >About</a
+        >
+        <a class="Recipe-nav-link" href="Recipe.html" title="recipe Collection"
+          >Recipe</a
+        >
+        <a class="Contact-nav-link" href="Contact.html" title="Contact author"
+          >Contact</a
+        >
       </div>
     </nav>
     <div class="hero">
