--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="article">
           <img
             class="img-fluid rounded-2"
-            src="/image/paella.jpg"
+            src="/image/Paella.jpg"
             alt="paella"
           />
           <h3 class="article-title">Paella</h3>
