--- a/About.html
+++ b/About.html
@@ -43,7 +43,7 @@
           <div class="row">
             <div class="col-lg-6">
               <img
-                class="aboutme-article-image d-none d-lg-block"
+                class="aboutme-article-image d-none d-lg-block img-fluid"
                 src="/image/Rectangleaboutme.png"
                 alt=""
               />
@@ -51,7 +51,7 @@
             <div class="col-lg-6">
               <div class="aboutme-article-text">
                 <img
-                  class="aboutme-sm-image d-block d-lg-none"
+                  class="aboutme-sm-image d-block d-lg-none img-fluid"
                   src="/image/Rectangleaboutme.png"
                   alt=""
                 />
@@ -62,12 +62,12 @@
                   urna nibh ut amet diam suscipit pretium massa, sollicitudin in
                   risus in. Sagittis.
                 </p>
-                <p class="follow-me">
-                  Follow me:
-                  <a href=""><img src="image/F.png" alt="" /></a>
-                  <a href=""><img src="image/insta.png" alt="" /></a>
-                  <a href=""><img src="image/in.png" alt="" /></a>
-                </p>
+                <div class="social-media-address follow-me">
+                  <p>Follow me:</p>
+                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
               </div>
             </div>
           </div>
