added link & change content

--- a/About.html
+++ b/About.html
@@ -68,9 +68,11 @@
                 </p>
                 <div class="social-media-address follow-me">
                   <p>Follow me:</p>
-                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  <div>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -97,9 +99,9 @@
               <img class="img-fluid" src="/image/paella.jpg" alt="paella" />
               <h3 class="card-title">Paella (Spain)</h3>
               <p>
-                Paella is a rice dish originally from Valencia in Spain. Paella
-                is regarded as one of the community's identifying symbols. It is
-                one of the best-known dishes in Spanish cuisine.
+                Paella is a classic Spanish rice and served in one pan. Although
+                paella originates from Valencia, it’s recognized as the national
+                food of Spain and there are several different varieties.
               </p>
             </div>
             <div class="favorite-card">
@@ -110,10 +112,10 @@
               />
               <h3 class="card-title">Salmon Poke Bowl (Hawaii)</h3>
               <p>
-                A classic Hawaiian preparation, poke (pronounced poh-kay) is a
-                salad of cubed raw fish—traditionally ahi (yellowfin tuna) but
-                also made with salmon, tofu, or even watermelon—marinated in
-                sesame oil and soy sauce.
+                A classic Hawaiian preparation, poke is a salad of cubed raw
+                fish—traditionally ahi (yellowfin tuna) but also made with
+                salmon, tofu, or even watermelon—marinated in sesame oil and soy
+                sauce.
               </p>
             </div>
           </div>
