--- a/Recipe.html
+++ b/Recipe.html
@@ -50,10 +50,10 @@
         <img
           class="recipe-card-image img-fluid rounded-2"
           src="image/ghormeh-sabzi1.jpg"
-          alt="food"
+          alt="Ghormeh sabzi image"
         />
       </div>
-      <h2 class="food-title">Ghormeh sabzi</h2>
+      <h2 class="food-title" id="Ghormeh-sabzi">Ghormeh sabzi</h2>
       <div class="recipe-row">
         <div class="column">
           <h3>Ingredient</h3>
@@ -136,8 +136,139 @@
           </div>
         </div>
       </div>
-    </div>
 
+      <div class="recipe-card">
+        <img
+          class="recipe-card-image img-fluid rounded-2"
+          src="image/Paella.jpg"
+          alt="Paella image"
+        />
+      </div>
+      <h2 class="food-title" id="Paella">Paella</h2>
+      <div class="recipe-row">
+        <div class="column">
+          <h3>Ingredient</h3>
+          <p class="ingredient">
+            Produce: onion, bell pepper, garlic, tomatoes, parsley, frozen peas.
+          </p>
+          <p class="ingredient">
+            Spices: bay leaf, paprika, saffron, salt and pepper.
+          </p>
+          <p class="ingredient">saffron powder:1 teaspoon saffron powder.</p>
+          <p class="ingredient">Seafood: jumbo shrimp, mussels, calamari.</p>
+          <p class="ingredient">
+            Chicken thighs: I prefer thighs to breasts in the recipe since they
+            don’t dry out as easily during longer cook times.
+          </p>
+          <p class="ingredient">White wine.</p>
+          <p class="ingredient">Spanish Rice</p>
+          <p class="ingredient">Chicken Broth.</p>
+        </div>
+
+        <div class="column">
+          <h3 class="method">Method</h3>
+          <div class="step mt-0">
+            <h4>step 1</h4>
+            <p class="content">
+              Sauté: Add olive oil to a skillet over medium heat. Add onion,
+              bell peppers and garlic and sauté until onion is translucent. Add
+              chopped tomato, bay leaf, paprika, saffron, salt and pepper. Stir
+              and cook for 5 minutes.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 2</h4>
+            <p class="content">Add white wine. Cook for 10 minutes.</p>
+          </div>
+          <div class="step">
+            <h4>step 3</h4>
+            <p class="content">
+              Add chicken & rice. Add chopped parsley and cook for 1 minute.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 4</h4>
+            <p class="content">
+              Add broth. Pour the broth slowly all around the pan and jiggle the
+              pan to get the rice into an even layer. (Do not stir the mixture
+              going forward!). Bring mixture to a boil. Reduce heat to medium
+              low. Give the pan a gentle shake back and forth once or twice
+              during cooking.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 5</h4>
+            <p class="content">
+              Cook uncovered: Cook paella uncovered for 15-18 minutes, then
+              nestle the shrimp, mussels and calamari into the mixture, sprinkle
+              peas on top and continue to cook (without stirring) for about 5
+              more minutes. Watch for most of the liquid to be absorbed and the
+              rice at the top nearly tender. (If for some reason your rice is
+              still uncooked, add ¼ cup more water or broth and continue
+              cooking).
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 6</h4>
+            <p class="content">
+              Cover and let rest. Remove pan from heat and cover pan with a lid
+              or tinfoil. Place a kitchen towel over the lid and allow to rest
+              for 10 minutes.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 7</h4>
+            <p class="content">
+              Serve. Garnish with fresh parsley and lemon slices. Serve.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="recipe-card">
+        <img
+          class="recipe-card-image img-fluid rounded-2"
+          src="image/salmon-poke-bowl.jpg"
+          alt="Paella image"
+        />
+      </div>
+      <h2 class="food-title" id="Salmon-Poke-Bowl">Salmon Poke Bowl</h2>
+      <div class="recipe-row">
+        <div class="column">
+          <h3>Ingredient</h3>
+          <p class="ingredient">Fresh salmon</p>
+          <p class="ingredient">sushi rice</p>
+          <p class="ingredient">edamame</p>
+          <p class="ingredient">avocado</p>
+          <p class="ingredient">cucumber</p>
+          <p class="ingredient">seaweed</p>
+          <p class="ingredient">soy sauce</p>
+          <p class="ingredient">sesame seeds</p>
+        </div>
+
+        <div class="column">
+          <h3 class="method">Method</h3>
+          <div class="step mt-0">
+            <h4>step 1</h4>
+            <p class="content">Cube fresh salmon and marinate in soy sauce.</p>
+          </div>
+          <div class="step">
+            <h4>step 2</h4>
+            <p class="content">
+              Arrange over cooked sushi rice with edamame, avocado, cucumber,
+              and seaweed.
+            </p>
+          </div>
+          <div class="step">
+            <h4>step 3</h4>
+            <p class="content">
+              Sprinkle with sesame seeds for added crunch and serve as a
+              protein-rich Hawaiian-inspired meal.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="brand-logo">
         <a href="#">SheCodes</a>
