--- a/index.html
+++ b/index.html
@@ -55,12 +55,21 @@
     <div class="homepage-container">
       <div class="roww">
         <div class="article">
-          <img
-            class="img-fluid rounded-2"
-            src="/image/salmon-poke-bowl.jpg"
-            alt="salmon poke bowl"
-          />
-          <h3 class="article-title">Salmon Poke Bowl</h3>
+          <a href="Recipe.html#Salmon-Poke-Bowl" target="_blank"
+            ><img
+              class="img-fluid rounded-2"
+              src="/image/Salmon-Poke-Bowl.jpg"
+              alt="salmon poke bowl"
+          /></a>
+
+          <h3 class="article-title">
+            <a
+              href="Recipe.html#Salmon-Poke-Bowl"
+              class="text-decoration-none text-reset"
+              target="_blank"
+              >Salmon Poke Bowl
+            </a>
+          </h3>
         </div>
         <div class="article">
           <img
@@ -81,13 +90,24 @@
           />
           <h3 class="article-title">Stir Fried Veggies With Tofu</h3>
         </div>
+
         <div class="article">
-          <img
-            class="img-fluid rounded-2"
-            src="/image/Paella.jpg"
-            alt="paella"
-          />
-          <h3 class="article-title">Paella</h3>
+          <a href="Recipe.html#Paella " target="_blank"
+            ><img
+              class="img-fluid rounded-2"
+              src="/image/Paella.jpg"
+              alt="paella"
+          /></a>
+
+          <h3 class="article-title">
+            <a
+              href="Recipe.html#Paella "
+              class="text-decoration-none text-reset"
+              target="_blank"
+            >
+              Paella</a
+            >
+          </h3>
         </div>
       </div>
 
@@ -101,12 +121,21 @@
           <h3 class="article-title">Carpes Salad</h3>
         </div>
         <div class="article">
-          <img
-            class="img-fluid rounded-2"
-            src="/image/ghormeh-sabzi.jpg"
-            alt="ghormeh sabzi"
-          />
-          <h3 class="article-title">Ghormeh Sabzi</h3>
+          <a href="Recipe.html#Ghormeh-sabzi" target="_blank">
+            <img
+              class="img-fluid rounded-2"
+              src="/image/ghormeh-sabzi.jpg"
+              alt="ghormeh sabzi"
+          /></a>
+
+          <h3 class="article-title">
+            <a
+              class="text-decoration-none text-reset"
+              href="/Recipe.html#Ghormeh-sabzi"
+              target="_blank"
+              >Ghormeh Sabzi</a
+            >
+          </h3>
         </div>
       </div>
     </div>
