--- a/About.html
+++ b/About.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="find a variety of inspiring recipes that are easy, delicious, and
+        healthy here"
+    />
+    <title>about</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,9 +74,15 @@
                 <div class="social-media-address follow-me">
                   <p>Follow me:</p>
                   <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="facebook.com" title="facebook" target="_blank"
+                      ><i class="fa-brands fa-facebook"></i
+                    ></a>
+                    <a href="instagram.com" title="instagram" target="_blank"
+                      ><i class="fa-brands fa-instagram"></i
+                    ></a>
+                    <a href="linkedin.com" title="linkedin" target="_blank"
+                      ><i class="fa-brands fa-linkedin"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -83,11 +94,13 @@
           <h2 class="text-center">Favorite Recipe</h2>
           <div class="cards-row">
             <div class="favorite-card">
-              <img
-                class="img-fluid"
-                src="/image/ghormeh-sabzi1.jpg"
-                alt="ghormeh sabzi"
-              />
+              <a href="Recipe.html#Ghormeh-sabzi" target="_blank"
+                ><img
+                  class="img-fluid"
+                  src="/image/ghormeh-sabzi1.jpg"
+                  alt="ghormeh sabzi"
+              /></a>
+
               <h3 class="card-title">Ghormeh sabzi (Iran)</h3>
               <p>
                 Ghormeh sabzi or Khoresht sabzi, also spelled qormeh sabzi, is
@@ -96,7 +109,10 @@
               </p>
             </div>
             <div class="favorite-card">
-              <img class="img-fluid" src="/image/paella.jpg" alt="paella" />
+              <a href="Recipe.html#Paella" target="_blank"
+                ><img class="img-fluid" src="/image/paella.jpg" alt="paella"
+              /></a>
+
               <h3 class="card-title">Paella (Spain)</h3>
               <p>
                 Paella is a classic Spanish rice and served in one pan. Although
@@ -105,11 +121,12 @@
               </p>
             </div>
             <div class="favorite-card">
-              <img
-                class="img-fluid"
-                src="/image/salmon-poke-bowl.jpg"
-                alt="salmon poke bowl"
-              />
+              <a href="Recipe.html#Salmon-Poke-Bowl" target="_blank"
+                ><img
+                  class="img-fluid"
+                  src="/image/salmon-poke-bowl.jpg"
+                  alt="salmon poke bowl"
+              /></a>
               <h3 class="card-title">Salmon Poke Bowl (Hawaii)</h3>
               <p>
                 A classic Hawaiian preparation, poke is a salad of cubed raw
@@ -126,14 +143,20 @@
     <footer>
       <div class="brand-logo">
         <a href="#">SheCodes</a>
-      </div>
-      <div class="social-media-address">
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-      </div>
-      <div class="copyright">
-        <p>© 2021 SheCodes All rights reserved.</p>
+        <div class="social-media-address">
+          <a href="facebook.com" title="facebook" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="instagram.com" title="instagram" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="linkedin.com" title="linkedin" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+        <div class="copyright">
+          <p>© 2021 SheCodes All rights reserved.</p>
+        </div>
       </div>
     </footer>
   </body>
