--- a/Recipe.html
+++ b/Recipe.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="find a variety of inspiring recipes that are easy, delicious, and
+        healthy here"
+    />
+    <title>Recipe Collection</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -274,9 +279,15 @@
         <a href="#">SheCodes</a>
       </div>
       <div class="social-media-address">
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="facebook.com" title="facebook" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="instagram.com" title="instagram" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="linkedin.com" title="linkedin" target="_blank"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
       </div>
       <div class="copyright">
         <p>© 2021 SheCodes All rights reserved.</p>
