--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
               class="img-fluid rounded-2"
               src="/image/Salmon-Poke-Bowl.jpg"
               alt="salmon poke bowl"
-          /></a>
+            />
+          </a>
 
           <h3 class="article-title">
             <a
@@ -117,6 +118,7 @@
             class="img-fluid rounded-2"
             src="/image/Caprese-Salad.jpg"
             alt="caprese salad"
+            style="max-width: 540px"
           />
           <h3 class="article-title">Carpes Salad</h3>
         </div>
@@ -144,9 +146,17 @@
         <a href="#">SheCodes</a>
       </div>
       <div class="social-media-address">
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <div class="social-media-address">
+          <a href="facebook.com" title="facebook" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="instagram.com" title="instagram" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="linkedin.com" title="linkedin" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
       </div>
       <div class="copyright">
         <p>© 2021 SheCodes All rights reserved.</p>
