--- a/About.html
+++ b/About.html
@@ -74,13 +74,22 @@
                 <div class="social-media-address follow-me">
                   <p>Follow me:</p>
                   <div>
-                    <a href="facebook.com" title="facebook" target="_blank"
+                    <a
+                      href="https://www.facebook.com"
+                      title="facebook"
+                      target="_blank"
                       ><i class="fa-brands fa-facebook"></i
                     ></a>
-                    <a href="instagram.com" title="instagram" target="_blank"
+                    <a
+                      href="https://www.instagram.com"
+                      title="instagram"
+                      target="_blank"
                       ><i class="fa-brands fa-instagram"></i
                     ></a>
-                    <a href="linkedin.com" title="linkedin" target="_blank"
+                    <a
+                      href="https://fr.linkedin.com"
+                      title="linkedin"
+                      target="_blank"
                       ><i class="fa-brands fa-linkedin"></i
                     ></a>
                   </div>
@@ -143,20 +152,20 @@
     <footer>
       <div class="brand-logo">
         <a href="#">SheCodes</a>
-        <div class="social-media-address">
-          <a href="facebook.com" title="facebook" target="_blank"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-          <a href="instagram.com" title="instagram" target="_blank"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a href="linkedin.com" title="linkedin" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
-        <div class="copyright">
-          <p>© 2021 SheCodes All rights reserved.</p>
-        </div>
+      </div>
+      <div class="social-media-address">
+        <a href="https://www.facebook.com" title="facebook" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://www.instagram.com" title="instagram" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://fr.linkedin.com" title="linkedin" target="_blank"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+      </div>
+      <div class="copyright">
+        <p>© 2021 SheCodes All rights reserved.</p>
       </div>
     </footer>
   </body>
