--- a/Contact.html
+++ b/Contact.html
@@ -78,13 +78,13 @@
         <a href="#">SheCodes</a>
       </div>
       <div class="social-media-address">
-        <a href="facebook.com" title="facebook" target="_blank"
+        <a href="https://www.facebook.com" title="facebook" target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="instagram.com" title="instagram" target="_blank"
+        <a href="https://www.instagram.com" title="instagram" target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
-        <a href="linkedin.com" title="linkedin" target="_blank"
+        <a href="https://fr.linkedin.com" title="linkedin" target="_blank"
           ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
@@ -93,12 +93,12 @@
       </div>
     </footer>
     <p class="text-center fw-bold">
-      Open source code by<a
+      <a
         href="https://github.com/caterpillarCodes/recepie-portfolio"
         title="github"
-      >
-        Caterpillar</a
-      >
+        >Open source code
+      </a>
+      by Caterpillar
     </p>
   </body>
 </html>
