--- a/Recipe.html
+++ b/Recipe.html
@@ -279,13 +279,13 @@
         <a href="#">SheCodes</a>
       </div>
       <div class="social-media-address">
-        <a href="facebook.com" title="facebook" target="_blank"
+        <a href="https://www.facebook.com" title="facebook" target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="instagram.com" title="instagram" target="_blank"
+        <a href="https://www.instagram.com" title="instagram" target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
-        <a href="linkedin.com" title="linkedin" target="_blank"
+        <a href="https://fr.linkedin.com" title="linkedin" target="_blank"
           ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
