--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="Recipe.html#Salmon-Poke-Bowl" target="_blank"
             ><img
               class="img-fluid rounded-2"
-              src="/image/Salmon-Poke-Bowl.jpg"
+              src="/image/salmon-poke-bowl.jpg"
               alt="salmon poke bowl"
             />
           </a>
@@ -147,13 +147,13 @@
       </div>
       <div class="social-media-address">
         <div class="social-media-address">
-          <a href="facebook.com" title="facebook" target="_blank"
+          <a href="https://www.facebook.com" title="facebook" target="_blank"
             ><i class="fa-brands fa-facebook"></i
           ></a>
-          <a href="instagram.com" title="instagram" target="_blank"
+          <a href="https://www.instagram.com" title="instagram" target="_blank"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="linkedin.com" title="linkedin" target="_blank"
+          <a href="https://fr.linkedin.com" title="linkedin" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
