update <img href="pealla.jpg>

--- a/About.html
+++ b/About.html
@@ -119,7 +119,7 @@
             </div>
             <div class="favorite-card">
               <a href="Recipe.html#Paella" target="_blank"
-                ><img class="img-fluid" src="/image/paella.jpg" alt="paella"
+                ><img class="img-fluid" src="/image/Paella.jpg" alt="paella"
               /></a>
 
               <h3 class="card-title">Paella (Spain)</h3>
