added github link

--- a/index.html
+++ b/index.html
@@ -162,5 +162,13 @@
         <p>© 2021 SheCodes All rights reserved.</p>
       </div>
     </footer>
+    <p class="text-center fw-bold">
+      <a
+        href="https://github.com/caterpillarCodes/recepie-portfolio"
+        title="github"
+        >Open source code
+      </a>
+      by Caterpillar
+    </p>
   </body>
 </html>
